<resources>
    <string name="app_name">WhatShouldIWatch</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="media_image">Media Image</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="minimize">Hide Description</string>
    <string name="read_desc">Read Description</string>
    <string name="favorites">Favorites</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="main_image">main_image</string>
    <string name="image_as_button">image_as_button</string>

</resources>