<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_overview"
        android:name="com.mikeschvedov.whatshouldiwatch.ui.overview.OverviewFragment"
        android:label="Overview"
        tools:layout="@layout/overview_fragment" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.mikeschvedov.whatshouldiwatch.ui.favorites.FavoritesFragment"
        android:label="Favorites"
        tools:layout="@layout/favorites_fragment" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mikeschvedov.whatshouldiwatch.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mikeschvedov.whatshouldiwatch.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.mikeschvedov.whatshouldiwatch.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>