<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faded_black"
    tools:context=".ui.settings.SettingsFragment">
<!--
    <ImageView
        android:id="@+id/back_button_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_btn_background"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="36dp"
        android:paddingBottom="36dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:translationZ="10dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_as_button" />
-->
    <ImageView
        android:id="@+id/media_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/main_image" />

    <TextView
        android:id="@+id/media_title_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/frame_background"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />
<ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/guideline3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"

        >
        <TextView
            android:id="@+id/read_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_description"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alfa_slab_one"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingVertical="8dp"
            android:text="@string/read_desc"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/media_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/faded_black"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="start"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/watch_trailer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_description"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center_horizontal"
            android:paddingVertical="8dp"
            android:text="@string/watch_trailer"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:flow_verticalGap="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:constraint_referenced_ids="read_desc,media_description,watch_trailer_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

